--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h3 class="description">
         Play the Prestige 2.0 Grinder Minigame to test your memory.
         <br><br>
-        <u>How to play:</u> Remember the light square positions to replicate it later when they hide.
+        <u>How to play:</u> Remember the number sequence and the number positions to replicate it later when they hide.
     </h3>
     <div class="streaks">
         STREAK: <span class="streak">0</span> <span class="fa">&#xf21b;</span> MAX STREAK: <span class="max_streak">0</span>
