--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Prestige 2.0 Grinder Minigame</title>
-    <meta name="description" content="Play the NoPixel Thermite Minigame to test your memory.">
+    <meta name="description" content="Play the Prestige 2.0 Grinder Minigame to test your memory.">
     <link rel="canonical" href="https://sharkiller.ddns.net/nopixel_minigame/thermite/" />
     <meta name="viewport" content="width=device-width, initial-scale=0.4">
     <link rel="icon" type="image/png" href="favicon.ico" sizes="32x32" />
@@ -31,6 +31,9 @@
         Play the Prestige 2.0 Grinder Minigame to test your memory.
         <br><br>
         <u>How to play:</u> Remember the number sequence and the number positions to replicate it later when they hide.
+        <br><br><br>
+        5x5 = 1 to 5 || 6x6 = 1 to 8 || 7x7 = 1 to 14 || 8x8 = 1 to 18 || 9x9 = 1 to 20 || 10x10 = 1 to 24 
+        <br><br>
     </h3>
     <div class="streaks">
         STREAK: <span class="streak">0</span> <span class="fa">&#xf21b;</span> MAX STREAK: <span class="max_streak">0</span>
@@ -38,14 +41,21 @@
     </div>
     <div class="options">
         <div class="option speed">
-            <label for="speed">Speed:</label>
-            <input id="speed" type="range" value="6" min="4" max="30" autocomplete="off">
+            <label for="speed">Timer:</label>
+            <input id="speed" type="range" value="6" min="4" max="30" autocomplete="off" title="Set the end time of the game">
             <div class="speed_value">6s</div>
         </div>
+
         <div class="option grid">
             <label for="grid">Grid:</label>
-            <input id="grid" type="range" value="5" min="5" max="10" autocomplete="off">
-            <div class="grid_value">5x5</div>
+            <input id="grid" type="range" value="6" min="5" max="10" autocomplete="off" title="Set the grid or the difficulty of the game.">
+            <div class="grid_value">6x6</div>
+        </div>
+
+        <div class="option speed">
+            <label for="speed1">Time before the numbers vanish:</label>
+            <input id="speed1" type="range" value="5" min="4" max="20" autocomplete="off" title="Set the timer before the numbers vanish.">
+            <div class="value speed_value">5s</div>
         </div>
     </div>
     <div class="minigame">
