--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
 
         <div class="option speed">
-            <label for="speed1">Time before the numbers vanish:</label>
-            <input id="speed1" type="range" value="5" min="4" max="20" autocomplete="off" title="Set the timer before the numbers vanish.">
+            <label for="speed1">Time before the numbers hide:</label>
+            <input id="speed1" type="range" value="5" min="4" max="20" autocomplete="off" title="Set the timer before the numbers hide.">
             <div class="value speed_value">5s</div>
         </div>
     </div>
